--- a/map.html
+++ b/map.html
@@ -29,7 +29,7 @@
         function initMap() {
             var map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 3,
-                center: { lat: -28.024, lng: 140.887 }
+                center: { lat: 25.062400, lng: 153.042605 }
             });
 
             var infoWin = new google.maps.InfoWindow();
@@ -64,27 +64,23 @@
         var contentString = '<div id="content">' +
             '<div id="siteNotice">' +
             '</div>' +
-            '<h1 id="firstHeading" class="firstHeading">Uluru</h1>' +
+            '<h1 id="firstHeading" class="firstHeading">Shanghai Pudong International Airport</h1>' +
             '<div id="bodyContent">' +
-            '<p><b>Uluru</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
-            'sandstone rock formation in the southern part of the ' +
-            'Northern Territory, central Australia. It lies 335&#160;km (208&#160;mi) ' +
-            'south west of the nearest large town, Alice Springs; 450&#160;km ' +
-            '(280&#160;mi) by road. Kata Tjuta and Uluru are the two major ' +
-            'features of the Uluru - Kata Tjuta National Park. Uluru is ' +
-            'sacred to the Pitjantjatjara and Yankunytjatjara, the ' +
-            'Aboriginal people of the area. It has many springs, waterholes, ' +
-            'rock caves and ancient paintings. Uluru is listed as a World ' +
-            'Heritage Site.</p>' +
-            '<p>Attribution: Uluru, <a href="https://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">' +
-            'https://en.wikipedia.org/w/index.php?title=Uluru</a> ' +
-            '(last visited June 22, 2009).</p>' +
+            '<p><b>Shipment ID:</b> 123456789</p>' +
+            '<p><b>Shipment Date:</b> 11/01/2018</p>' +
+            '<p><b>Receiver:</b> John Smith</p> ' +
+            '<p><b>Tracking Status:</b> At Shanghai airport waiting for customs clearance.</p> ' +
             '</div>' +
             '</div>';
 
         var locations = [
-            { lat: -31.563910, lng: 147.154312, info: contentString },
-            { lat: -33.718234, lng: 150.363181, info: 'Marker 2' },
+            { lat: 31.146281, lng: 121.808777, info: contentString },
+            { lat: 39.112665, lng: 116.490851, info: 'Marker 2' },
+            { lat: 39.000000, lng: 117.490851, info: 'Marker 2' },
+            { lat: 34.000000, lng: 108.490851, info: 'Marker 2' },
+            { lat: 22.000000, lng: 113.490851, info: 'Marker 2' },
+            { lat: 25.000000, lng: 121.490851, info: 'Marker 2' },
+            { lat: 23.000000, lng: 114.490851, info: 'Marker 2' },
             { lat: -33.727111, lng: 150.371124, info: 'Marker 3' },
             { lat: -33.848588, lng: 151.209834, info: 'Marker 4' },
             { lat: -33.851702, lng: 151.216968, info: 'Marker 5' },
