add more coordinates

--- a/map.html
+++ b/map.html
@@ -78,9 +78,53 @@
             { lat: 39.112665, lng: 116.490851, info: 'Marker 2' },
             { lat: 39.000000, lng: 117.490851, info: 'Marker 2' },
             { lat: 34.000000, lng: 108.490851, info: 'Marker 2' },
+            { lat: 34.112665, lng: 110.490851, info: 'Marker 2' },
             { lat: 22.000000, lng: 113.490851, info: 'Marker 2' },
             { lat: 25.000000, lng: 121.490851, info: 'Marker 2' },
             { lat: 23.000000, lng: 114.490851, info: 'Marker 2' },
+            { lat: 13.112665, lng: 79.490851, info: 'Marker 2' },
+            { lat: 13.000000, lng: 79.371124, info: 'Marker 2' },
+            { lat: 13.000000, lng: 80.209834, info: 'Marker 2' },
+            { lat: 13.212665, lng: 77.490851, info: 'Marker 2' },
+            { lat: 13.000000, lng: 77.371124, info: 'Marker 2' },
+            { lat: 13.000000, lng: 77.000000, info: 'Marker 2' },
+            { lat: 13.000000, lng: 77.216968, info: 'Marker 2' },
+            { lat: 10.280000, lng: 78.150000, info: 'Marker 2' },
+            { lat: 10.290000, lng: 78.136968, info: 'Marker 2' },
+            { lat: 17.460000, lng: 78.550000, info: 'Marker 2' },
+            { lat: 17.450000, lng: 78.216968, info: 'Marker 2' },
+            { lat: 17.470000, lng: 78.150000, info: 'Marker 2' },
+            { lat: 17.480000, lng: 78.136968, info: 'Marker 2' },
+            { lat: 28.760000, lng: 77.215000, info: 'Marker 2' },
+            { lat: 28.758000, lng: 77.216968, info: 'Marker 2' },
+            { lat: 28.757000, lng: 77.214000, info: 'Marker 2' },
+            { lat: 28.761000, lng: 77.216968, info: 'Marker 2' },
+            { lat: 22.761000, lng: 88.216968, info: 'Marker 2' },
+            { lat: 22.761100, lng: 88.216568, info: 'Marker 2' },
+            { lat: 21.761100, lng: 88.216568, info: 'Marker 2' },
+            { lat: 50.124500, lng: 8.644815, info: 'Marker 2' },
+            { lat: 51.124500, lng: 9.644815, info: 'Marker 2' },
+            { lat: 52.124500, lng: 7.644815, info: 'Marker 2' },
+            { lat: 53.124500, lng: 6.644815, info: 'Marker 2' },
+            { lat: 54.124500, lng: 10.644815, info: 'Marker 2' },
+            { lat: 55.124500, lng: 8.744815, info: 'Marker 2' },
+            { lat: 46.124500, lng: 20.744815, info: 'Marker 2' },
+            { lat: 46.124500, lng: 20.844815, info: 'Marker 2' },
+            { lat: 32.124500, lng: -96.844815, info: 'Marker 2' },
+            { lat: 33.124500, lng: -97.844815, info: 'Marker 2' },
+            { lat: 31.124500, lng: -96.844815, info: 'Marker 2' },
+            { lat: 40.124500, lng: -96.844815, info: 'Marker 2' },
+            { lat: 44.124500, lng: -96.844815, info: 'Marker 2' },
+            { lat: 41.124500, lng: -96.844815, info: 'Marker 2' },
+            { lat: 45.124500, lng: -96.844815, info: 'Marker 2' },
+            { lat: 49.124500, lng: -123.844815, info: 'Marker 2' },
+            { lat: 49.124500, lng: -122.844815, info: 'Marker 2' },
+            { lat: 45.960500, lng: -73.844815, info: 'Marker 2' },
+            { lat: 34.477601, lng: -110.196715, info: 'Marker 2' },
+            { lat: 34.477601, lng: -117.196715, info: 'Marker 2' },
+            { lat: 34.477601, lng: -118.196715, info: 'Marker 2' },
+            { lat: 34.477601, lng: -118.196715, info: 'Marker 2' },
+            { lat: 34.477601, lng: -106.844815, info: 'Marker 2' },
             { lat: -33.727111, lng: 150.371124, info: 'Marker 3' },
             { lat: -33.848588, lng: 151.209834, info: 'Marker 4' },
             { lat: -33.851702, lng: 151.216968, info: 'Marker 5' },
@@ -88,6 +132,12 @@
             { lat: -35.304724, lng: 148.662905, info: 'Marker 7' },
             { lat: -36.817685, lng: 175.699196, info: 'Marker 8' },
             { lat: -36.828611, lng: 175.790222, info: 'Marker 9' },
+            { lat: 38.970318, lng: -77.449371, info: 'Marker 8' },
+            { lat: 38.970311, lng: -77.449321, info: 'Marker 8' },
+            { lat: 28.686489, lng: -81.381946, info: 'Marker 8' },
+            { lat: 28.970311, lng: -81.381946, info: 'Marker 8' },
+            { lat: 50.089811, lng: -96.608177, info: 'Marker 8' },
+            { lat: 50.089841, lng: -96.608117, info: 'Marker 8' },
             { lat: -37.750000, lng: 145.116667, info: 'Marker 10' },
             { lat: -37.759859, lng: 145.128708, info: 'Marker 11' },
             { lat: -37.765015, lng: 145.133858, info: 'Marker 12' },
