add more coordinate

--- a/map.html
+++ b/map.html
@@ -44,7 +44,8 @@
             var markers = locations.map(function (location, i) {
                 var marker = new google.maps.Marker({
                     position: location,
-                    label: labels[i % labels.length]
+                    label: labels[i % labels.length],
+                    icon: 'https://maps.google.com/mapfiles/kml/shapes/parking_lot_maps.png'
                 });
 
                 google.maps.event.addListener(marker, 'click', function (evt) {
@@ -58,10 +59,13 @@
 
             // Add a marker clusterer to manage the markers.
             var markerCluster = new MarkerClusterer(map, markers,
-                { imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m' });
+                { 
+                    imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m',
+                    gridSize: 90
+                });
         }
 
-        var contentString = '<div id="content">' +
+        var contentString1 = '<div id="content">' +
             '<div id="siteNotice">' +
             '</div>' +
             '<h1 id="firstHeading" class="firstHeading">Shanghai Pudong International Airport</h1>' +
@@ -72,86 +76,191 @@
             '<p><b>Tracking Status:</b> At Shanghai airport waiting for customs clearance.</p> ' +
             '</div>' +
             '</div>';
+        var contentString2 = '<div id="content">' +
+            '<div id="siteNotice">' +
+            '</div>' +
+            '<h1 id="firstHeading" class="firstHeading">Fedex Warehouse</h1>' +
+            '<div id="bodyContent">' +
+            '<p><b>Shipment ID:</b> 5421589900</p>' +
+            '<p><b>Shipment Date:</b> 11/02/2018</p>' +
+            '<p><b>Receiver:</b> Alice Smith</p> ' +
+            '<p><b>Tracking Status:</b> At Fedex warehouse waiting for deliver.</p> ' +
+            '</div>' +
+            '</div>';
+        var contentString3 = '<div id="content">' +
+            '<div id="siteNotice">' +
+            '</div>' +
+            '<h1 id="firstHeading" class="firstHeading">UPS Station</h1>' +
+            '<div id="bodyContent">' +
+            '<p><b>Shipment ID:</b> 7789200004</p>' +
+            '<p><b>Shipment Date:</b> 10/25/2018</p>' +
+            '<p><b>Receiver:</b> John Bob</p> ' +
+            '<p><b>Tracking Status:</b> At UPS station waiting for deliever.</p> ' +
+            '</div>' +
+            '</div>';
 
         var locations = [
-            { lat: 31.146281, lng: 121.808777, info: contentString },
-            { lat: 39.112665, lng: 116.490851, info: 'Marker 2' },
-            { lat: 39.000000, lng: 117.490851, info: 'Marker 2' },
-            { lat: 34.000000, lng: 108.490851, info: 'Marker 2' },
-            { lat: 34.112665, lng: 110.490851, info: 'Marker 2' },
-            { lat: 22.000000, lng: 113.490851, info: 'Marker 2' },
-            { lat: 25.000000, lng: 121.490851, info: 'Marker 2' },
-            { lat: 23.000000, lng: 114.490851, info: 'Marker 2' },
-            { lat: 13.112665, lng: 79.490851, info: 'Marker 2' },
-            { lat: 13.000000, lng: 79.371124, info: 'Marker 2' },
-            { lat: 13.000000, lng: 80.209834, info: 'Marker 2' },
-            { lat: 13.212665, lng: 77.490851, info: 'Marker 2' },
-            { lat: 13.000000, lng: 77.371124, info: 'Marker 2' },
-            { lat: 13.000000, lng: 77.000000, info: 'Marker 2' },
-            { lat: 13.000000, lng: 77.216968, info: 'Marker 2' },
-            { lat: 10.280000, lng: 78.150000, info: 'Marker 2' },
-            { lat: 10.290000, lng: 78.136968, info: 'Marker 2' },
-            { lat: 17.460000, lng: 78.550000, info: 'Marker 2' },
-            { lat: 17.450000, lng: 78.216968, info: 'Marker 2' },
-            { lat: 17.470000, lng: 78.150000, info: 'Marker 2' },
-            { lat: 17.480000, lng: 78.136968, info: 'Marker 2' },
-            { lat: 28.760000, lng: 77.215000, info: 'Marker 2' },
-            { lat: 28.758000, lng: 77.216968, info: 'Marker 2' },
-            { lat: 28.757000, lng: 77.214000, info: 'Marker 2' },
-            { lat: 28.761000, lng: 77.216968, info: 'Marker 2' },
-            { lat: 22.761000, lng: 88.216968, info: 'Marker 2' },
-            { lat: 22.761100, lng: 88.216568, info: 'Marker 2' },
-            { lat: 21.761100, lng: 88.216568, info: 'Marker 2' },
-            { lat: 50.124500, lng: 8.644815, info: 'Marker 2' },
-            { lat: 51.124500, lng: 9.644815, info: 'Marker 2' },
-            { lat: 52.124500, lng: 7.644815, info: 'Marker 2' },
-            { lat: 53.124500, lng: 6.644815, info: 'Marker 2' },
-            { lat: 54.124500, lng: 10.644815, info: 'Marker 2' },
-            { lat: 55.124500, lng: 8.744815, info: 'Marker 2' },
-            { lat: 46.124500, lng: 20.744815, info: 'Marker 2' },
-            { lat: 46.124500, lng: 20.844815, info: 'Marker 2' },
-            { lat: 32.124500, lng: -96.844815, info: 'Marker 2' },
-            { lat: 33.124500, lng: -97.844815, info: 'Marker 2' },
-            { lat: 31.124500, lng: -96.844815, info: 'Marker 2' },
-            { lat: 40.124500, lng: -96.844815, info: 'Marker 2' },
-            { lat: 44.124500, lng: -96.844815, info: 'Marker 2' },
-            { lat: 41.124500, lng: -96.844815, info: 'Marker 2' },
-            { lat: 45.124500, lng: -96.844815, info: 'Marker 2' },
-            { lat: 49.124500, lng: -123.844815, info: 'Marker 2' },
-            { lat: 49.124500, lng: -122.844815, info: 'Marker 2' },
-            { lat: 45.960500, lng: -73.844815, info: 'Marker 2' },
-            { lat: 34.477601, lng: -110.196715, info: 'Marker 2' },
-            { lat: 34.477601, lng: -117.196715, info: 'Marker 2' },
-            { lat: 34.477601, lng: -118.196715, info: 'Marker 2' },
-            { lat: 34.477601, lng: -118.196715, info: 'Marker 2' },
-            { lat: 34.477601, lng: -106.844815, info: 'Marker 2' },
-            { lat: -33.727111, lng: 150.371124, info: 'Marker 3' },
-            { lat: -33.848588, lng: 151.209834, info: 'Marker 4' },
-            { lat: -33.851702, lng: 151.216968, info: 'Marker 5' },
-            { lat: -34.671264, lng: 150.863657, info: 'Marker 6' },
-            { lat: -35.304724, lng: 148.662905, info: 'Marker 7' },
-            { lat: -36.817685, lng: 175.699196, info: 'Marker 8' },
-            { lat: -36.828611, lng: 175.790222, info: 'Marker 9' },
-            { lat: 38.970318, lng: -77.449371, info: 'Marker 8' },
-            { lat: 38.970311, lng: -77.449321, info: 'Marker 8' },
-            { lat: 28.686489, lng: -81.381946, info: 'Marker 8' },
-            { lat: 28.970311, lng: -81.381946, info: 'Marker 8' },
-            { lat: 50.089811, lng: -96.608177, info: 'Marker 8' },
-            { lat: 50.089841, lng: -96.608117, info: 'Marker 8' },
-            { lat: -37.750000, lng: 145.116667, info: 'Marker 10' },
-            { lat: -37.759859, lng: 145.128708, info: 'Marker 11' },
-            { lat: -37.765015, lng: 145.133858, info: 'Marker 12' },
-            { lat: -37.770104, lng: 145.143299, info: 'Marker 13' },
-            { lat: -37.773700, lng: 145.145187, info: 'Marker 14' },
-            { lat: -37.774785, lng: 145.137978, info: 'Marker 15' },
-            { lat: -37.819616, lng: 144.968119, info: 'Marker 16' },
-            { lat: -38.330766, lng: 144.695692, info: 'Marker 17' },
-            { lat: -39.927193, lng: 175.053218, info: 'Marker 18' },
-            { lat: -41.330162, lng: 174.865694, info: 'Marker 19' },
-            { lat: -42.734358, lng: 147.439506, info: 'Marker 20' },
-            { lat: -42.734358, lng: 147.501315, info: 'Marker 21' },
-            { lat: -42.735258, lng: 147.438000, info: 'Marker 22' },
-            { lat: -43.999792, lng: 170.463352, info: 'Marker 23' }
+            { lat: 31.146281, lng: 121.808777, info: contentString1 },
+            { lat: 19.191272, lng: 73.373729, info: contentString2 },
+            { lat: 19.192271, lng: 73.373728, info: contentString2 },
+            { lat: 19.193273, lng: 73.373727, info: contentString2 },
+            { lat: 19.194274, lng: 73.373730, info: contentString2 },
+            { lat: 19.195271, lng: 73.373720, info: contentString2 },
+            { lat: 19.197272, lng: 73.373721, info: contentString2 },
+            { lat: 19.198273, lng: 73.373722, info: contentString2 },
+            { lat: 19.199274, lng: 73.373723, info: contentString2 },
+            { lat: 19.198275, lng: 73.373724, info: contentString2 },
+            { lat: 19.194276, lng: 73.371725, info: contentString2 },
+            { lat: 19.194277, lng: 73.372726, info: contentString2 },
+            { lat: 19.194278, lng: 73.373727, info: contentString2 },
+            { lat: 19.194279, lng: 73.374728, info: contentString2 },
+            { lat: 19.194270, lng: 73.375729, info: contentString2 },
+            { lat: 19.194281, lng: 73.376720, info: contentString2 },
+            { lat: 19.194282, lng: 73.377721, info: contentString2 },
+            { lat: 19.194283, lng: 73.378722, info: contentString2 },
+            { lat: 19.194272, lng: 73.379729, info: contentString2 },
+            { lat: 19.194171, lng: 73.373728, info: contentString2 },
+            { lat: 19.194373, lng: 73.373727, info: contentString2 },
+            { lat: 19.194474, lng: 73.373730, info: contentString2 },
+            { lat: 19.194571, lng: 73.373720, info: contentString2 },
+            { lat: 19.194672, lng: 73.373721, info: contentString2 },
+            { lat: 19.194773, lng: 73.373722, info: contentString2 },
+            { lat: 19.194872, lng: 73.373729, info: contentString2 },
+            { lat: 19.194971, lng: 73.373728, info: contentString2 },
+            { lat: 19.191473, lng: 73.373727, info: contentString2 },
+            { lat: 19.194272, lng: 73.373729, info: contentString2 },
+            { lat: 19.194271, lng: 73.373728, info: contentString2 },
+            { lat: 19.194273, lng: 73.373727, info: contentString2 },
+            { lat: 19.194274, lng: 73.373730, info: contentString2 },
+            { lat: 19.194271, lng: 73.373720, info: contentString2 },
+            { lat: 19.194272, lng: 73.373721, info: contentString2 },
+            { lat: 19.194273, lng: 73.373722, info: contentString2 },
+            { lat: 19.194274, lng: 73.373723, info: contentString2 },
+            { lat: 19.194275, lng: 73.373724, info: contentString2 },
+            { lat: 19.194276, lng: 73.373725, info: contentString2 },
+            { lat: 19.194277, lng: 73.373726, info: contentString2 },
+            { lat: 19.194278, lng: 73.373727, info: contentString2 },
+            { lat: 19.194279, lng: 73.373728, info: contentString2 },
+            { lat: 19.194270, lng: 73.373729, info: contentString2 },
+            { lat: 19.194281, lng: 73.373720, info: contentString2 },
+            { lat: 19.194282, lng: 73.373721, info: contentString2 },
+            { lat: 19.194283, lng: 73.373722, info: contentString2 },
+            { lat: 19.194272, lng: 73.373729, info: contentString2 },
+            { lat: 19.194271, lng: 73.373728, info: contentString2 },
+            { lat: 19.194279, lng: 73.373728, info: contentString2 },
+            { lat: 19.194272, lng: 73.373721, info: contentString2 },
+            { lat: 19.194273, lng: 73.373722, info: contentString2 },
+            { lat: 19.194274, lng: 73.373723, info: contentString2 },
+            { lat: 19.194275, lng: 73.373724, info: contentString2 },
+            { lat: 19.194276, lng: 73.373725, info: contentString2 },
+            { lat: 19.194277, lng: 73.373726, info: contentString2 },
+            { lat: 19.194278, lng: 73.373727, info: contentString2 },
+            { lat: 19.194279, lng: 73.373728, info: contentString2 },
+            { lat: 19.194270, lng: 73.373729, info: contentString2 },
+            { lat: 19.194281, lng: 73.373720, info: contentString2 },
+            { lat: 19.194282, lng: 73.373721, info: contentString2 },
+            { lat: 19.194283, lng: 73.373722, info: contentString2 },
+            { lat: 19.194274, lng: 73.373730, info: contentString2 },
+            { lat: 19.194271, lng: 73.373720, info: contentString2 },
+            { lat: 19.194272, lng: 73.373721, info: contentString2 },
+            { lat: 19.194273, lng: 73.373722, info: contentString2 },
+            { lat: 19.194274, lng: 73.373723, info: contentString2 },
+            { lat: 19.194275, lng: 73.373724, info: contentString2 },
+            { lat: 19.194276, lng: 73.373725, info: contentString2 },
+            { lat: 19.194277, lng: 73.373726, info: contentString2 },
+            { lat: 19.194278, lng: 73.373727, info: contentString2 },
+            { lat: 19.194279, lng: 73.373728, info: contentString2 },
+            { lat: 19.194270, lng: 73.373729, info: contentString2 },
+            { lat: 19.194281, lng: 73.373720, info: contentString2 },
+            { lat: 19.194282, lng: 73.373721, info: contentString2 },
+            { lat: 19.194283, lng: 73.373722, info: contentString2 },
+            { lat: 19.194174, lng: 73.373723, info: contentString2 },
+            { lat: 19.194275, lng: 73.373724, info: contentString2 },
+            { lat: 19.194376, lng: 73.373725, info: contentString2 },
+            { lat: 19.194477, lng: 73.373726, info: contentString2 },
+            { lat: 19.194578, lng: 73.373727, info: contentString2 },
+            { lat: 19.194679, lng: 73.373728, info: contentString2 },
+            { lat: 19.194770, lng: 73.373729, info: contentString2 },
+            { lat: 19.194881, lng: 73.373720, info: contentString2 },
+            { lat: 19.194982, lng: 73.373721, info: contentString2 },
+            { lat: 19.194183, lng: 73.373722, info: contentString2 },
+            { lat: 39.112665, lng: 116.490851, info: contentString3 },
+            { lat: 39.000000, lng: 117.490851, info: contentString3 },
+            { lat: 34.000000, lng: 108.490851, info: contentString3 },
+            { lat: 34.112665, lng: 110.490851, info: contentString3 },
+            { lat: 22.000000, lng: 113.490851, info: contentString3 },
+            { lat: 25.000000, lng: 121.490851, info: contentString3 },
+            { lat: 23.000000, lng: 114.490851, info: contentString3 },
+            { lat: 13.112665, lng: 79.490851, info: contentString2 },
+            { lat: 13.000000, lng: 79.371124, info: contentString2 },
+            { lat: 13.000000, lng: 80.209834, info: contentString2 },
+            { lat: 13.212665, lng: 77.490851, info: contentString2 },
+            { lat: 13.000000, lng: 77.371124, info: contentString2 },
+            { lat: 13.000000, lng: 77.000000, info: contentString2 },
+            { lat: 13.000000, lng: 77.216968, info: contentString2 },
+            { lat: 10.280000, lng: 78.150000, info: contentString2 },
+            { lat: 10.290000, lng: 78.136968, info: contentString2 },
+            { lat: 17.460000, lng: 78.550000, info: contentString2 },
+            { lat: 17.450000, lng: 78.216968, info: contentString2 },
+            { lat: 17.470000, lng: 78.150000, info: contentString2 },
+            { lat: 17.480000, lng: 78.136968, info: contentString2 },
+            { lat: 28.760000, lng: 77.215000, info: contentString2 },
+            { lat: 28.758000, lng: 77.216968, info: contentString2 },
+            { lat: 28.757000, lng: 77.214000, info: contentString2 },
+            { lat: 28.761000, lng: 77.216968, info: contentString2 },
+            { lat: 22.761000, lng: 88.216968, info: contentString2 },
+            { lat: 22.761100, lng: 88.216568, info: contentString2 },
+            { lat: 21.761100, lng: 88.216568, info: contentString2 },
+            { lat: 50.124500, lng: 8.644815, info: contentString3 },
+            { lat: 51.124500, lng: 9.644815, info: contentString3 },
+            { lat: 52.124500, lng: 7.644815, info: contentString3 },
+            { lat: 53.124500, lng: 6.644815, info: contentString3 },
+            { lat: 54.124500, lng: 10.644815, info: contentString3 },
+            { lat: 55.124500, lng: 8.744815, info: contentString3 },
+            { lat: 46.124500, lng: 20.744815, info: contentString3 },
+            { lat: 46.124500, lng: 20.844815, info: contentString3 },
+            { lat: 32.124500, lng: -96.844815, info: contentString3 },
+            { lat: 33.124500, lng: -97.844815, info: contentString3 },
+            { lat: 31.124500, lng: -96.844815, info: contentString3 },
+            { lat: 40.124500, lng: -96.844815, info: contentString3 },
+            { lat: 44.124500, lng: -96.844815, info: contentString3 },
+            { lat: 41.124500, lng: -96.844815, info: contentString3 },
+            { lat: 45.124500, lng: -96.844815, info: contentString3 },
+            { lat: 49.124500, lng: -123.844815, info: contentString3 },
+            { lat: 49.124500, lng: -122.844815, info: contentString3 },
+            { lat: 45.960500, lng: -73.844815, info: contentString3 },
+            { lat: 34.477601, lng: -110.196715, info: contentString3 },
+            { lat: 34.477601, lng: -117.196715, info: contentString3 },
+            { lat: 34.477601, lng: -118.196715, info: contentString3 },
+            { lat: 34.477601, lng: -118.196715, info: contentString3 },
+            { lat: 34.477601, lng: -106.844815, info: contentString3 },
+            { lat: -33.727111, lng: 150.371124, info: contentString3 },
+            { lat: -33.848588, lng: 151.209834, info: contentString3 },
+            { lat: -33.851702, lng: 151.216968, info: contentString3 },
+            { lat: -34.671264, lng: 150.863657, info: contentString3 },
+            { lat: -35.304724, lng: 148.662905, info: contentString3 },
+            { lat: -36.817685, lng: 175.699196, info: contentString3 },
+            { lat: -36.828611, lng: 175.790222, info: contentString3 },
+            { lat: 38.970318, lng: -77.449371, info: contentString3 },
+            { lat: 38.970311, lng: -77.449321, info: contentString3 },
+            { lat: 28.686489, lng: -81.381946, info: contentString3 },
+            { lat: 28.970311, lng: -81.381946, info: contentString3 },
+            { lat: 50.089811, lng: -96.608177, info: contentString3 },
+            { lat: 50.089841, lng: -96.608117, info: contentString2 },
+            { lat: -37.750000, lng: 145.116667, info: contentString2 },
+            { lat: -37.759859, lng: 145.128708, info: contentString2 },
+            { lat: -37.765015, lng: 145.133858, info: contentString2 },
+            { lat: -37.770104, lng: 145.143299, info: contentString2 },
+            { lat: -37.773700, lng: 145.145187, info: contentString2 },
+            { lat: -37.774785, lng: 145.137978, info: contentString2 },
+            { lat: -37.819616, lng: 144.968119, info: contentString2 },
+            { lat: -38.330766, lng: 144.695692, info: contentString2 },
+            { lat: -39.927193, lng: 175.053218, info: contentString2 },
+            { lat: -41.330162, lng: 174.865694, info: contentString2 },
+            { lat: -42.734358, lng: 147.439506, info: contentString2 },
+            { lat: -42.734358, lng: 147.501315, info: contentString2 },
+            { lat: -42.735258, lng: 147.438000, info: contentString2 },
+            { lat: -43.999792, lng: 170.463352, info: contentString2 }
         ]
     </script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
