--- a/map.html
+++ b/map.html
@@ -17,7 +17,7 @@
         body {
             height: 100%;
             margin: 0;
-            padding: 0;11
+            padding: 0;
         }
     </style>
 </head>
