--- a/map.html
+++ b/map.html
@@ -16,7 +16,7 @@ test
         html,
         body {
             height: 100%;
-            margin: 0;
+            margin: 0;test
             padding: 0;
         }
     </style>
