--- a/map.html
+++ b/map.html
@@ -16,7 +16,7 @@ test
         html,
         body {
             height: 100%;
-            margin: 0;test
+            margin: 0;
             padding: 0;
         }
     </style>
